syntax = "proto3";

package com.example.grpc;

option go_package = "producer-api-go-grpc/proto";

// Event processing service
service EventService {
  rpc ProcessEvent(EventRequest) returns (EventResponse);
  rpc HealthCheck(HealthRequest) returns (HealthResponse);
}

// Request message for event processing
message EventRequest {
  EventHeader event_header = 1;
  repeated Entity entities = 2;
}

// Response message for event processing
message EventResponse {
  bool success = 1;
  string message = 2;
}

// Event header
message EventHeader {
  string uuid = 1;
  string event_name = 2;
  string created_date = 3;
  string saved_date = 4;
  string event_type = 5;
}

// Entity header containing metadata
message EntityHeader {
  string entity_id = 1;
  string entity_type = 2;
  string created_at = 3;
  string updated_at = 4;
}

// Entity with header and flat properties
message Entity {
  EntityHeader entity_header = 1;
  // Additional entity-specific properties stored as JSON string
  string properties_json = 2;
}

// Health check request
message HealthRequest {
  string service = 1;
}

// Health check response
message HealthResponse {
  bool healthy = 1;
  string message = 2;
}

